<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvContacto"
    android:layout_width="wrap_content"
    android:layout_height="170dp"
    android:layout_marginLeft="24dp"
    android:layout_marginStart="24dp"
    android:layout_marginRight="24dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:elevation="2dp"
    card_view.cardCornerRadius="@dimen/corner_radius_cardview" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:weightSum="1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.76">

            <ImageView
                android:id="@+id/imgFoto"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="0dp"
                android:contentDescription=""
                android:scaleType="centerCrop"
                android:src="@mipmap/muchacha1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvNombreCv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/pnombre"
                android:textSize="@dimen/nombre_cardview"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgFoto" />

            <TextView
                android:id="@+id/tvTelefonoCv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/ptelefono"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNombreCv"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintRight_toLeftOf="@+id/tvLikes"
                android:layout_marginRight="28dp" />

            <ImageButton
                android:id="@+id/btnLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_like"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tvTelefonoCv"
                app:layout_constraintTop_toBottomOf="@+id/tvNombreCv"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintVertical_bias="0.444" />

            <TextView
                android:id="@+id/tvLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tv_likes"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNombreCv"
                app:layout_constraintVertical_bias="0.0" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>