<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrador.curso4miscontactos.DetalleContacto"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">

    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar">
    </include>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints,UseCompoundDrawables"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/miActionBar">


        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="@dimen/left"
            android:layout_marginTop="@dimen/top"
            android:text="@string/nombre"
            android:textSize="@dimen/nombre_contacto"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutTelefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:onClick="llamar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/nombre_contacto"
            android:layout_height="@dimen/nombre_contacto"
            android:src="@mipmap/ic_telefono"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/left"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/telefono"
            android:textSize="@dimen/telefono_contacto" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearLayoutEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:onClick="enviarMail"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="UseCompoundDrawables"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutTelefono"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imgEmail"
            android:layout_width="@dimen/nombre_contacto"
            android:layout_height="@dimen/nombre_contacto"
            android:src="@mipmap/ic_email"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email"
            android:textSize="@dimen/email_contacto"
            android:layout_margin="10dp"
            tools:ignore="InefficientWeight,SpUsage" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
